# FialhoClean

./: .gitattributes  .gitignore  ABOUT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: sync-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: cleaner.rs  debloater.rs  empty_folders.rs  mod.rs  optimizer.rs  repair.rs  system.rs
src-tauri/src/models/: cleaner.rs  debloater.rs  empty_folders.rs  mod.rs  optimizer.rs  repair.rs  system.rs
src-tauri/src/services/: cleaner.rs  debloater.rs  empty_folders.rs  mod.rs  optimizer.rs  process_runner.rs  registry.rs  repair.rs  scan_helper.rs  system_info.rs
src/components/cleaner/: CleanerCategory.tsx  CleanerView.tsx  CleaningOverlay.tsx  EmptyFoldersView.tsx  ResultsScreen.tsx  ScanningScreen.tsx  SelectScreen.tsx  StepDots.tsx  SuccessScreen.tsx
src/constants/: app.ts  categories.ts  categoryIcons.ts  thresholds.ts  ui.ts
src/hooks/: useAsyncState.ts  useCleaner.ts  useCleanerFlow.ts  useConfirmModal.ts  useDebloater.ts  useEmptyFolders.ts  useNotify.ts  useOptimizer.ts  usePowerSettings.ts  useRepair.ts  useScheduledTasks.ts  useServices.ts  useStartup.ts  useSystemInfo.ts  useSystemTweaks.ts
src/i18n/: config.ts  index.ts  types.ts
src/lib/: errors.ts  format.ts  invoke.ts  safety.ts  settingsPersistence.ts
src/services/: cleanerService.ts  debloaterService.ts  emptyFoldersService.ts  optimizerService.ts  repairService.ts  systemService.ts
src/stores/: cleanerStore.ts  debloaterStore.ts  optimizerStore.ts  settingsStore.ts  uiStore.ts
src/types/: cleaner.ts  common.ts  debloater.ts  emptyFolders.ts  optimizer.ts  repair.ts  system.ts
(+37 files in other folders)
