[package]
name = "fialho-optimizer"
version = "1.0.0"
edition = "2021"
description = "Windows PC cleaner & optimizer"
repository = "https://github.com/HanielCota/FialhoOptimizer"
license = "MIT"
authors = ["Haniel Cota"]
keywords = ["windows", "cleaner", "optimizer", "tauri"]
categories = ["gui", "utilities"]
readme = "../README.md"

[lib]
name = "fialho_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "sync", "time", "rt", "macros"] }
sysinfo = "0.38"
winreg = "0.56"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
